# douyin-downloader

./: DouYinCommand.py  README.md  USAGE_GUIDE.md  config.yml  config_douyin_example.yml  config_downloader_example.yml  consolidate_mbti_notes.py  debug_url.py  docker-compose.yml  downloader.py  downloader_v2.py  downloader_v3.py  nginx.conf  process_enfp_notes.py  prometheus.yml  pyproject.toml  requirements.txt  simple_cookie_getter.py  test_downloader_v2.py  test_parsing_service.py  test_with_signature.py  tmp.txt  tmp.txt.bak  web_parser.py  xbogus_generator.py  测试报告.md
.claude/: settings.local.json
apiproxy/douyin/auth/: browser_cookies.py  cookie_manager.py  signature_generator.py
apiproxy/douyin/strategies/: api_strategy.py
docs/project/: proj-guide-20260106-podcast-obsidian-workflow.md  proj-report-20260106-enfp-video-note-generation.md
parsing_service/: .env.example  Dockerfile  README.md  app.py  requirements.txt
parsing_service/strategies/: api_strategy.py  base_strategy.py  playwright_strategy.py  requests_strategy.py  selenium_strategy.py
parsing_service/utils/: cache_manager.py  metrics_collector.py  proxy_manager.py
