[project]
name = "douyin-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "aiohttp==3.13.0",
    "brotli==1.1.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "tqdm==4.67.1",
]
